moveinsync/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moveinsync-deployment
  labels:
    app: moveinsync
spec:
  replicas: 2  # Run 2 pods for redundancy
  selector:
    matchLabels:
      app: moveinsync
  template:
    metadata:
      labels:
        app: moveinsync
    spec:
      containers:
      - name: moveinsync
        image: 508262720940.dkr.ecr.ap-northeast-1.amazonaws.com/moveinsync:7
        ports:
        - containerPort: 8501
        resources:
          requests:
            cpu: "250m"
            memory: "512Mi"
          limits:
            cpu: "500m"
            memory: "1Gi"
