moveinsync/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: moveinsync-service
spec:
  selector:
    app: moveinsync
  type: LoadBalancer  # Exposes your service externally
  ports:
    - protocol: TCP
      port: 80       # External port
      targetPort: 8501  # Container port
